--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,5 @@
 # The name of the bundle and title of the window
-name: "NES Bundler Demo"
+name: "Super Mario Bros 2 (Lost Levels) (Unl).nes"
 
 # Optional version of your game, will default to the nes-bundler version if omitted
 # NOTE: Must be semver
